--- a/reactportfolio/src/App.css
+++ b/reactportfolio/src/App.css
@@ -1,5 +1,15 @@
 body {
   background-color: rgb(0, 0, 0);
+  padding-bottom: 50px;
+}
+
+.footer {
+  position: fixed;
+  width: 100%;
+  height: 35px;
+  bottom: 0;
+  background-color: purple;
+  color: white;
 }
 
 .Navigation {
@@ -15,6 +25,16 @@ body {
 .Navigation div a:hover {
   color: black;
   background-color: white;
+}
+
+.navContainer {
+  height: 75px;
+}
+
+.logo {
+  width: 70px;
+  height: 70px;
+  position: absolute;
 }
 
 .card-body div a {
