--- a/reactportfolio/src/App.css
+++ b/reactportfolio/src/App.css
@@ -8,13 +8,13 @@ body {
   width: 100%;
   height: 35px;
   bottom: 0;
-  background-color: purple;
+  background-color: navy;
   color: white;
 }
 
 .Navigation {
   justify-content: end;
-  background-color: purple;
+  background-color: navy;
 }
 
 .Navigation div a {
@@ -32,17 +32,24 @@ body {
 }
 
 .logo {
-  width: 70px;
-  height: 70px;
   position: absolute;
 }
 
+.logoImage {
+  width: 70px;
+  height: 70px;
+}
+
+.Name {
+  margin-right: 75px;
+}
+
 .card-body div a {
-  background-color: purple;
+  background-color: navy;
   border-color: black;
 }
 
 .card-body a {
-  background-color: purple;
+  background-color: navy;
   border-color: black;
 }
